--- a/2543085-lab2.html
+++ b/2543085-lab2.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doc</title>
+    <style>
+        h1{
+            background-color: blue
+
+        }
+
+        h2{
+            background-color: gray;
+            text-align: center;
+        }
+
+        h3{
+            background-color: red;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
